# Programming_for_FE_Project

./: .gitignore  README.md  Test.cpp  test 4
Building_a_High_Performance_C++_Order_Book/: main.cpp  order_book.hpp  strategy.hpp
Fast_Matrix/: Fast_Matrix.cpp  README.md
HFT_Challenge/: CMakeLists.txt  README.md  Run.text  cilent_op_Linux.cpp  client.cpp  client_Linux.cpp  client_op.cpp  results.json  server.cpp  server_Linux.cpp
HFT_Phase5_OrderBook/: OrderBook.hpp  Phase 5 - HFT OrderBook Optimization.md  benchmark_results.csv  lookUp.cpp  main  main.cpp  testResult.ipynb
HFT_Tick_Processing_CRTP_vs_Virtual_Dispatch/: CMakeLists.txt  README.md
HFT_Tick_Processing_CRTP_vs_Virtual_Dispatch/include/: market_data.hpp  strategy_crtp.hpp  strategy_virtual.hpp  utils.hpp
HFT_Tick_Processing_CRTP_vs_Virtual_Dispatch/src/: main.cpp
HFT_phase4/: CMakeLists.txt  CMakeSettings.json  README.md  align64.xlsx  flat vs map.xlsx  new vs pool.xlsx  report.tex  smart vs raw pointer.xlsx
HFT_phase4/exp_alignment/: CMakeLists.txt  CMakeSettings.json
HFT_phase4/exp_alignment/include/: Config.hpp  MarketData.hpp  Order.hpp  OrderManager.hpp  Timer.hpp  TradeLogger.hpp
HFT_phase4/exp_alignment/src/: main.cpp
HFT_phase4/exp_allocator/: CMakeLists.txt  CMakeSettings.json
HFT_phase4/exp_allocator/include/: Config.hpp  MemoryPool.hpp  Order.hpp
HFT_phase4/exp_allocator/src/: main.cpp
HFT_phase4/exp_container/: CMakeLists.txt  CMakeSettings.json
HFT_phase4/exp_container/include/: MatchingEngine.hpp  MemoryPool.hpp  Order.hpp  OrderBook.hpp
HFT_phase4/exp_container/src/: main.cpp
HFT_phase4/exp_container/test/: test_latency.cpp
HFT_phase4/exp_pointers/: CMakeLists.txt  CMakeSettings.json
HFT_phase4/exp_pointers/src/: main.cpp
HFT_phase4/include/: MarketData.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  OrderManager.hpp
HFT_phase4/src/: main.cpp
High_Frequency_Trading_Engine/: MarketDataFeed.cpp  MarketDataFeed.h  README.md  TradeEngine.cpp  TradeEngine.h  main.cpp  orders.csv  visiualization.ipynb
High_Performance_C++_Order_Book/: Histogram.ipynb  README.md
High_Performance_C++_Order_Book/stl_heaps/: latency_amend_heaps.csv  latency_delete_heaps.csv  latency_insert_heaps.csv  main.cpp  orderbook_new.hpp
High_Performance_C++_Order_Book/vector/: latency_amend_vector.csv  latency_delete_vector.csv  latency_insert_vector.csv  main.cpp  orderbook copy.hpp  orderbook.hpp
High_Performance_C++_Order_Book/vector_without_tunning/: latency_amend_vector_without_tuning.csv  latency_delete_vector_without_tuning.csv  latency_insert_vector_without_tuning.csv  main.cpp  orderbook.hpp
High_Performance_Linear_Algebra_Kernels/: Original_Linear_Operation.cpp  Original_Linear_Operation.h  Original_Linear_Operation_Inline.cpp  Original_Linear_Operation_Inline.h  README.md  Test_Program.cpp  Test_alignment.cpp  a.out  gmon.out  gprof_report.txt  my_program.prof  report.md  test_performance.md  test_py.ipynb
Local_Order_Book_Core_Trading_Infrastructure/: README.md  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager.cpp  order_manager.h
Measuring_Virtual_vs_Non_Virtual_Dispatch_in_a_Minimal_HFT_Order_Processor/: demo.cpp  hft_assignment.cpp  hft_assignment.csv
Momentum_Based_Smart_Order_Client/: README  hft_client_win.cpp  hft_server_win.cpp  report.md  strategy.md
Phase4_Build_Benchmark_HFT/: .gitignore  Phase4_Build_Benchmark_HFT.cpp  Phase4_Build_Benchmark_HFT.sln  Phase4_Build_Benchmark_HFT.vcxproj  Phase4_Build_Benchmark_HFT.vcxproj.filters
Phase4_Build_Benchmark_HFT/Phase4_B.dd646c06/x64/Debug/: Phase4_Build_Benchmark_HFT.exe.recipe  Phase4_Build_Benchmark_HFT.ilk  vc143.idb
Phase4_Build_Benchmark_HFT/Phase4_B.dd646c06/x64/Debug/Phase4_B.dd646c06.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Phase4_Build_Benchmark_HFT.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TCP_Client_Server_Trading_System/: tcp_client.cpp  tcp_server.cpp
Test.dSYM/Contents/Resources/Relocations/aarch64/: Test.yml
Threaded_Market_Simulation_and_Order_Routing/: 1000_orders.csv  README.md  demo.cpp  main.cpp  orders.csv  visulization.ipynb
